# Trilinos

./: .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  PackagesList.cmake  README  Version.cmake  branches.md  test.txt
.github/: dependabot.yml
.github/workflows/: AT2.yml  cdash_urls.yml  clang-format.yml  clang_format.yml  clang_format_comment.yml  codeql.yml  muelu_tutorial.yml  pre_commit_run.yml  scorecards.yml
cmake/ctest/drivers/geminga/: TrilinosCTestDriverCore.geminga.gcc.cmake
cmake/tribits/common_tpls/: FindTPLBinUtils.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.awesome  Doxyfile.in  Doxyfile.inputs  analysis.md  core.md  discretization.md  header.html  index.md  interfaces.md  kokkos-kernels.md  kokkos.md  linear_solvers.md  nonlinear_solvers.md  seacas.md  stk.md  tpls.md
doc/DocumentingParameterLists/webfiles/: parameterList.xsl
